--- a/frontend/style.css
+++ b/frontend/style.css
@@ -27,3 +27,7 @@
     box-shadow: 0 5px 5px #0005;
     font-family: monospace;
 }
+#logs > div.warn {
+    background: yellow;
+    color: black;
+}
