--- a/frontend/style.css
+++ b/frontend/style.css
@@ -50,3 +50,12 @@
     box-sizing: border-box;
     overflow-y: scroll;
 }
+
+button {
+    background: white;
+    border: 2px solid black;
+    margin: .25em;
+    padding: .5em;
+    border-radius: .5em;
+    cursor: pointer;
+}
